<resources>
    <string name="app_name">AnimationRepot</string>
    <string name="alpha">Alpha</string>
    <string name="scale">Scale</string>
    <string name="rotate">Rotate</string>
    <string name="translate">Translate</string>
    <string name="start">start</string>
    <string name="view">View</string>
    <string name="property">Property</string>
    <string name="drawable">Drawable</string>
    <string name="set">Set </string>
    

</resources>
