<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thinkmobiles.animationrepot.fragments.ViewFragment">

         <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alpha"
            android:id="@+id/alpha_view"
             android:layout_margin="@dimen/margin_dimension"
             android:layout_centerHorizontal="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scale"
            android:id="@+id/scale_view"
            android:layout_below="@id/alpha_view"
            android:layout_margin="@dimen/margin_dimension"
            android:layout_centerHorizontal="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotate"
            android:layout_below="@id/scale_view"
            android:id="@+id/rotate_view"
            android:layout_margin="@dimen/margin_dimension"
            android:layout_centerHorizontal="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translate"
            android:id="@+id/translate_view"
            android:layout_below="@id/rotate_view"
            android:layout_margin="@dimen/margin_dimension"
            android:layout_centerHorizontal="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:id="@+id/set_view"
            android:layout_below="@id/translate_view"
            android:layout_margin="@dimen/margin_dimension"
            android:layout_centerHorizontal="true"/>

</RelativeLayout>